update container style

--- a/lib/styles.css
+++ b/lib/styles.css
@@ -7,3 +7,12 @@ body {
 hr{
     margin: 2rem 0rem;
 }
+
+.container{
+    padding: 0rem 1rem;
+}
+
+.container-center{
+    margin: auto;
+    width: 500px;
+}
