--- a/lib/styles.css
+++ b/lib/styles.css
@@ -60,6 +60,7 @@ hr{
 
 .nav .color{
     color: white;
+    text-decoration: none;
 }
 .nav-position{
     text-align: right;
@@ -83,6 +84,7 @@ hr{
     color: var(--primary-color);
     background-color: var(--secondary-color);
     padding: 2rem;
+    text-align: center;
 }
 
 .section{
@@ -95,4 +97,10 @@ hr{
 
 .non-white{
     background-color: var(--secondary-color);
+}
+
+.footer{
+    background-color: var(--secondary-color);
+    padding: 1rem;
+    text-align: center;
 }
