--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ header{
     border-bottom-left-radius: 2rem;
 }
 
-header p{
+header h2{
     text-align: center;
     font-size: 1.25rem;
 }
@@ -41,7 +41,19 @@ a{
 img{
     display: block;
     margin: auto;
-    width: 500px;
+    width: 400px;
+    height: 200px;
     padding: 2rem 2rem;
     
+}
+
+/* intro styling */
+
+.intro{
+    text-align: center;
+}
+
+span{
+    color: var(--primary-color);
+    font-size: x-large;
 }
