--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,8 @@ footer{
     margin: 1rem 0;
     border-bottom-left-radius: 1rem;
     border-top-right-radius: 1rem;
+    color: white;
+ 
 }
 
 .learn{
@@ -154,4 +156,10 @@ footer{
     margin-bottom: -4%;
     width: 200px;
     height: 150px;
+}
+
+footer img{   
+    display: inline;
+    width:50px;
+    height:50px;
 }
