--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
+/* index styling */
+
 :root {
     --primary-color : #D97706;
     --secondary-color : #A7F3D0;
@@ -158,8 +160,9 @@ footer{
     height: 150px;
 }
 
-footer img{   
+footer img,.non-white img{   
     display: inline;
     width:50px;
     height:50px;
 }
+
