fix rename css home-project&blog link

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ section{
     background-color: var(--secondary-color);
 }
 
-.explore{
+.seeproject{
     background-color: var(--primary-color);
     border-radius: 2rem;
     font-size: 17.5px;
@@ -97,7 +97,7 @@ section{
 
 /* blog section styling */
 
-.experience{
+.seeblog{
     background-color: white;
     border-radius: 2rem;
     font-size: 17.5px;
@@ -164,5 +164,11 @@ footer img,.non-white img{
     display: inline;
     width:50px;
     height:50px;
+}
+
+/* css styling */
+ul{
+    text-align: center;
+    list-style: none;
 }
 
