--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ footer{
     height: 150px;
 }
 
-footer img,.non-white img{   
+footer img{   
     display: inline;
     width:50px;
     height:50px;
@@ -172,3 +172,26 @@ ul{
     list-style: none;
 }
 
+ul .explore{
+    background-color: var(--primary-color);
+    border-radius: 2rem;
+    height: 20px;
+    padding: 10px 20px;
+    /* margin: 1rem; */
+}
+
+ul .experience{
+    background-color: white;
+    border-radius: 2rem;
+    height: 20px;
+    padding: 10px 20px;
+    margin: 1rem;
+    border: 1px solid var(--primary-color);
+} 
+ 
+ul img{
+    display: inline;
+    width:100px;
+    height:50px;
+}
+}
